⛹👱 Checkpoint ./index.html:897891/976 ./.glitch-assets:897891/376

--- a/index.html
+++ b/index.html
@@ -14,12 +14,19 @@
     <script src="/script.js" defer></script>
   </head>  
   <body>
-    <h1>Hi there!</h1>
-    
-    <p>
-      I'm your cool new webpage. Made with <a href="https://glitch.com">Glitch</a>!
-    </p>
+    <h1>Redirecting in <span id="countdowntimer">3</span></p>
 
+<script type="text/javascript">
+    var timeleft = 3;
+    var downloadTimer = setInterval(function(){
+    timeleft--;
+    document.getElementById("countdowntimer").textContent = timeleft;
+    if(timeleft <= 0)
+      window.location.replace("https://meet.google.com/dsu-uscv-wbf")
+      
+    },1000);
+</script>
+   <img src="https://cdn.glitch.com/4ad52b19-808e-4c46-b909-909492ffe1db%2FImage-1.png?v=1600893790996" />
     <!-- include the Glitch button to show what the webpage is about and
           to make it easier for folks to view source and remix -->
     <div class="glitchButton" style="position:fixed;top:20px;right:20px;"></div>
